# scipilot

./: .gitignore  index.html  package.json  pnpm-lock.yaml
.github/workflows/: build-linux-appimage.yml
docs/: release.md  release_linux.md
references/: experiment-templates.md
scripts/: build_release.ps1  build_release.py  build_sidecar.py  publish_release.ps1
sidecar/: requirements.txt  server.py
src/: App.tsx  Router.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/nsis/: hooks.nsh
src-tauri/resources/: settings.default.json
src-tauri/src/: lib.rs  main.rs  sidecar.rs  state.rs
src-tauri/src/commands/: license.rs  llm.rs  mod.rs  research.rs  settings.rs
src-tauri/src/llm/: claude.rs  mod.rs  ollama.rs  openai.rs
tools/: _pandoc_reference.docx  agent_bridge.py  arxiv_download.py  baidu_scholar.py  bug_regression_gates.py  crossref_search.py  data_analyzer.py  diagram_generator.py  domain_utils.py  experiment_design.py  figure_generator.py  figure_planner.py  generate_keys.py  ieee_xplore.py  image_gen.py  image_roles.py  landscape_analysis.py  literature_review.py  openalex_search.py  paper_content_crawler.py  paper_dashboard.py  paper_quality.py  paper_writer.py  paper_writer_gates.py  paperscraper_tool.py  project_figure_extractor.py  project_models.py  project_paper_context.py  project_runner.py  project_state.py  pypaperbot_tool.py  remote.example.yaml  remote_runner.py  requirements.txt  research_bridge.py  research_capability_audit.py  research_export.py  research_qa.py  scholarly_search.py  scihub2pdf_tool.py  (+12 more)
(+49 files in other folders)
