[package]
name = "scipilot"
version = "0.1.2"
description = "SciPilot — AI-powered research copilot"
authors = ["SciPilot"]
edition = "2021"

[lib]
name = "scipilot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "blocking", "stream"] }
futures = "0.3"
base64 = "0.22"
opener = "0.7"
